测试提交: 将ECS中的S从Main中转换为单例形式，并在Main脚本内规划好启动顺序，确保未来的可能错误在可控范围内

--- a/ECS-史莱姆法师-索拉/addons/Todo_Manager/todo.cfg
+++ b/ECS-史莱姆法师-索拉/addons/Todo_Manager/todo.cfg
@@ -7,7 +7,7 @@ ignore_paths=Array[String](["addons/"])
 
 [patterns]
 
-patterns=[["\\bTODO\\b", Color(0.5882353, 0.94509804, 0.6784314, 1), 0], ["\\bHACK\\b", Color(0.8352941, 0.7372549, 0.4392157, 1), 0], ["\\bFIXME\\b", Color(0.8352941, 0.4392157, 0.4392157, 1), 0]]
+patterns=[["\\bTODO\\b", Color(0.5882353, 0.94509804, 0.6784314, 1), 0], ["\\bHACK\\b", Color(0.8352941, 0.7372549, 0.4392157, 1), 0], ["\\bFIXME\\b", Color(0.8352941, 0.4392157, 0.4392157, 1), 0], ["\\bNEW\\b", Color(0.7734375, 0.17070006, 0.45323324, 1), 0], ["\\bTEST\\b", Color(0.92578125, 0.90536165, 0.17900848, 1), 0]]
 
 [config]
 
